[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["dream_utils"]

[project]
name = "dream_utils"
version = "0.1.0"
description = "Multifunctional tool kit"
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
authors = [
  {name = "MZ chen", email = "hyhpchenmengzhu@gmail.com"}
]

[project.urls]
Homepage = "https://github.com/VMIJUNV/dream_utils"